# aspect-ratio-too

./: .gitignore  .pre-commit-config.yaml  .python-version  AUTHORS.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
api/: public_api.contract.json
src/aspect_ratio_too/: __init__.py  aspect_ratio.py  cli.py  cli_wrapper.py  utils.py
src/tests/: test_aspect_ratio.py
tests/: test_aspect_ratio.py  test_cli.py  test_cli_wrapper.py  test_utils.py
