[metadata]
# long_description = file: README.md
long_description_content_type = text/markdown

# [options]
# packages = find:

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 120
ignore = E203,W503

[isort]
# known_third_party = celery,django,redis,requests,rest_framework
multi_line_output = 3
include_trailing_comma = True
